<resources>
    <string name="app_name">SmartHomeMobile</string>


    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Login</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="registers">Register</string>
    <string name="account">Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="nam">Nam</string>
    <string name="n">Nữ</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot">Forgot</string>
    <string name="account_forgot_password">Account Forgot Password:</string>
    <string name="otp_code">OTP CODE</string>
    <string name="otp_code_in_email_you">OTP code in email you:</string>
    <string name="otp_c">OTP Code</string>
    <string name="account_forgot">Account Forgot:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_new_password">Confirm New Password:</string>
    <string name="comfirm_new_password">Comfirm New Password</string>
    <string name="btn_new_password">New Password</string>
    <string name="btn_otp_code">Otp Code</string>
<<<<<<< HEAD

<!--    profile-->
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
=======
    <string name="email">Email\n</string>
    <string name="phone">Phone\n</string>
>>>>>>> 84e7f6740b470eac79e427a65d82538ea124b0af
</resources>