<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    android:background="@drawable/login_bk"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="Register" />


    <EditText
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:id="@+id/editTextName"
        style="@style/modifiedEditText"
        android:hint="@string/login_name_hint"
        android:inputType="textPersonName"
        android:maxLines="1" />

    <EditText
        android:id="@+id/editTextMobile"
        style="@style/modifiedEditText"
        android:hint="@string/login_mobile_number_hint"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <EditText
        android:id="@+id/editTextLoginAccount"
        style="@style/modifiedEditText"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <EditText
        android:id="@+id/editTextLoginPassword"
        style="@style/modifiedEditText"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="@dimen/loginViewsMargin"/>


    <Button
        android:id="@+id/buttonLogin"
        style="@style/loginButton"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="Signup" />

    <TextView
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="@string/login_signup_hint"
        android:textAlignment="textEnd"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold" />


</LinearLayout>