<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@drawable/login_bk"

    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544">


        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/account_forgot_password" />

        <TextView
            android:id="@+id/textViewAccountForgotPassword"
            style="@style/modifiedEditText"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:autofillHints=""
            android:text="@string/account_forgot"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextAccountForgotPassword"
            style="@style/modifiedEditText"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:autofillHints=""
            android:hint="@string/account"
            android:inputType="textPersonName"
            android:maxLines="1" />




        <Button
            android:id="@+id/buttonAccountForgotPassword"
            style="@style/loginButton"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/forgot" />

        <TextView
            android:id="@+id/textViewLogin"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>