<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" android:layout_marginTop="20dp"/>
    <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp" app:srcCompat="@drawable/bottom_btn2" android:id="@+id/imageViewAvatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp" app:layout_constraintHorizontal_bias="0.498"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="409dp"
            android:layout_height="wrap_content" tools:layout_editor_absoluteX="1dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="20dp"
            android:id="@+id/linearLayout2">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:weightSum="4" android:gravity="center"
                android:padding="10dp" android:paddingStart="20dp" android:paddingEnd="60dp">
            <TextView
                    android:text="Account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView20" android:layout_weight="1"
                    android:textColor="#2661F9"/>
            <EditText
                    android:id="@+id/editTextProfileAccount"
                    style="@style/modifiedEditText"
                    android:autofillHints=""
                    android:hint="@string/account"
                    android:inputType="textPersonName"
                    android:maxLines="1" android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="3" android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:weightSum="4" android:gravity="center"
                android:padding="10dp" android:paddingStart="20dp" android:paddingEnd="60dp">
            <TextView
                    android:text="Username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView21" android:layout_weight="1"
                    android:textColor="#2661F9"/>
            <EditText
                    android:id="@+id/editTextProfileUsername"
                    style="@style/modifiedEditText"
                    android:autofillHints=""
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:maxLines="1" android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="3" android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:weightSum="4" android:gravity="center"
                android:padding="10dp" android:paddingStart="20dp" android:paddingEnd="60dp">
            <TextView
                    android:text="Email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView22" android:layout_weight="1"
                    android:textColor="#2661F9"/>
            <EditText
                    android:id="@+id/editTextProfileEmail"
                    style="@style/modifiedEditText"
                    android:autofillHints=""
                    android:hint="@string/login_email_hint"
                    android:inputType="textPersonName"
                    android:maxLines="1" android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="3" android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:weightSum="4" android:gravity="center"
                android:padding="10dp" android:paddingStart="20dp" android:paddingEnd="60dp">
            <TextView
                    android:text="Phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView23" android:layout_weight="1"
                    android:textColor="#2661F9"/>
            <EditText
                    android:id="@+id/editTextProfilePhone"
                    style="@style/modifiedEditText"
                    android:autofillHints=""
                    android:hint="@string/phone_number"
                    android:inputType="textPersonName"
                    android:maxLines="1" android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="3" android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:weightSum="4" android:gravity="center"
                android:padding="10dp" android:paddingStart="20dp" android:paddingEnd="60dp">
            <TextView
                    android:text="Address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView24" android:layout_weight="1"
                    android:textColor="#2661F9"/>
            <EditText
                    android:id="@+id/editTextProfileAddress"
                    style="@style/modifiedEditText"
                    android:autofillHints=""
                    android:hint="@string/address"
                    android:inputType="textPersonName"
                    android:maxLines="1" android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="3" android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <Button
            android:text="back"
            android:layout_width="100dp"
            android:layout_height="wrap_content" android:id="@+id/buttonProfileBackHome"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonSaveProfile"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginTop="28dp" android:layout_marginStart="36dp"/>
    <Button
            android:text="Change Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonChangePassword"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/buttonSaveProfile"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginTop="28dp"
            android:layout_marginEnd="12dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>